--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
   .row { display: flex; justify-content: space-between; align-items: center; padding: 5px 0; }
   .row label { font-size: 13px; color: #374151; flex: 1; }
   .row .hint { display: block; font-size: 11px; color: #9ca3af; }
-  .row input, .row select { width: 100px; padding: 5px 8px; border: 1px solid #d1d5db; border-radius: 6px; font-size: 13px; text-align: right; outline: none; }
-  .row input:focus, .row select:focus { border-color: #93c5fd; box-shadow: 0 0 0 2px rgba(147,197,253,0.3); }
-  .row select { width: 150px; text-align: left; }
+  .row input { width: 100px; padding: 5px 8px; border: 1px solid #d1d5db; border-radius: 6px; font-size: 13px; text-align: right; outline: none; }
+  .row input:focus { border-color: #93c5fd; box-shadow: 0 0 0 2px rgba(147,197,253,0.3); }
   .row .unit { font-size: 11px; color: #9ca3af; width: 55px; text-align: left; margin-left: 6px; }
   .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 16px; }
   .stat-box { background: #fff; border-radius: 8px; padding: 10px; text-align: center; }
@@ -46,7 +45,7 @@
   @media (max-width: 500px) {
     .grid { grid-template-columns: 1fr; }
     .row { flex-wrap: wrap; gap: 4px; }
-    .row input, .row select { width: 80px; }
+    .row input { width: 80px; }
   }
 </style>
 </head>
@@ -71,32 +70,20 @@
     <div class="row"><label>Crecimiento historial/turno <span class="hint">Contexto acumulado</span></label><input id="histTk" type="number" value="300"><span class="unit">tokens</span></div>
     <div class="row"><label>Respuesta del chatbot (output)</label><input id="respTk" type="number" value="250"><span class="unit">tokens</span></div>
 
-    <div class="section-title">Imágenes (30% de requests)</div>
+    <div class="section-title">Imágenes (% de requests)</div>
     <div class="row"><label>% requests con imagen</label><input id="imgPct" type="number" value="30"><span class="unit">%</span></div>
     <div class="row"><label>Imágenes por request</label><input id="imgCount" type="number" value="1"><span class="unit">imgs</span></div>
     <div class="row"><label>Resolución promedio <span class="hint">tokens = (L × W) / 750</span></label><input id="imgL" type="number" value="1280" style="width:70px"><span style="font-size:13px;color:#6b7280;margin:0 2px">×</span><input id="imgW" type="number" value="720" style="width:70px"><span class="unit">px</span></div>
-
-    <div class="section-title">Evaluación de Calidad</div>
-    <div class="row"><label>% conversaciones evaluadas</label><input id="evalPct" type="number" value="10"><span class="unit">%</span></div>
-    <div class="row"><label>Modelo de evaluación</label>
-      <select id="evalModel">
-        <option value="nova-lite">Nova Lite</option>
-        <option value="nova-micro">Nova Micro</option>
-        <option value="nova-pro">Nova Pro</option>
-        <option value="claude-haiku-45">Claude Haiku 4.5</option>
-      </select>
-    </div>
   </div>
 
   <div class="card">
-    <div class="section-title" style="margin-top:0">Precios On-Demand (US East, Feb 2026)</div>
+    <div class="section-title" style="margin-top:0">Precios On-Demand – Claude Haiku 4.5 (US East, Feb 2026)</div>
     <table class="prices">
-      <thead><tr><th>Modelo</th><th>Input / 1M tk</th><th>Output / 1M tk</th></tr></thead>
+      <thead><tr><th>Tipo</th><th>Precio / 1M tokens</th></tr></thead>
       <tbody>
-        <tr><td>Claude Haiku 4.5</td><td>$1.000</td><td>$5.000</td></tr>
-        <tr><td>Nova Pro</td><td>$0.800</td><td>$3.200</td></tr>
-        <tr><td>Nova Lite</td><td>$0.060</td><td>$0.240</td></tr>
-        <tr><td>Nova Micro</td><td>$0.035</td><td>$0.140</td></tr>
+        <tr><td>Input tokens (texto)</td><td>$1.00</td></tr>
+        <tr><td>Input tokens (imágenes)</td><td>$1.00</td></tr>
+        <tr><td>Output tokens</td><td>$5.00</td></tr>
       </tbody>
     </table>
     <p class="source">Fuente: aws.amazon.com/bedrock/pricing — consultado Feb 2026</p>
@@ -110,33 +97,25 @@
       <div class="stat-box"><div class="label">Input tokens/mes</div><div class="value" id="rInput">—</div></div>
       <div class="stat-box"><div class="label">Output tokens/mes</div><div class="value" id="rOutput">—</div></div>
     </div>
-    <div class="cost-row"><span>Chatbot texto (Claude Haiku 4.5)</span><span class="val" id="rChatText">—</span></div>
-    <div class="cost-row"><span>Chatbot imágenes (Claude Haiku 4.5)</span><span class="val" id="rChatImg">—</span></div>
-    <div class="cost-row"><span>Evaluación (<span id="rEvalName">Nova Lite</span>, <span id="rEvalConvs">0</span> conv)</span><span class="val" id="rEval">—</span></div>
+    <div class="cost-row"><span>Texto (input + output)</span><span class="val" id="rChatText">—</span></div>
+    <div class="cost-row"><span>Imágenes (input)</span><span class="val" id="rChatImg">—</span></div>
     <div class="sep">
-      <div class="total-row"><span>Total Mensual Bedrock</span><span id="rMonthly">—</span></div>
-      <div class="total-row"><span>Total Anual Bedrock</span><span id="rAnnual">—</span></div>
-    </div>
-    <div class="sep">
-      <div class="total-row" style="background:#f0fdf4;"><span style="color:#166534;">+ Infra AWS (Lambda, API GW, DynamoDB…)</span><span style="color:#166534;" id="rInfra">$1,149.40</span></div>
-      <div class="total-row" style="background:#fef3c7;"><span style="color:#92400e;">TOTAL MENSUAL (Bedrock + Infra)</span><span style="color:#92400e;" id="rGrandMonthly">—</span></div>
-      <div class="total-row" style="background:#fef3c7;"><span style="color:#92400e;">TOTAL ANUAL (Bedrock + Infra)</span><span style="color:#92400e;" id="rGrandAnnual">—</span></div>
+      <div class="total-row"><span>Total Mensual</span><span id="rMonthly">—</span></div>
+      <div class="total-row"><span>Total Anual</span><span id="rAnnual">—</span></div>
     </div>
     <div class="sep2">
-      <div class="cost-row"><span>Costo por conversación (solo Bedrock)</span><span class="val" id="rPerConv">—</span></div>
-      <div class="cost-row"><span>Costo por conversación (todo incluido)</span><span class="val" id="rPerConvAll">—</span></div>
+      <div class="cost-row"><span>Costo por conversación</span><span class="val" id="rPerConv">—</span></div>
+      <div class="cost-row"><span>Tokens imagen por foto <span style="font-size:11px;color:#9ca3af;">((L×W)/750)</span></span><span class="val" id="rImgTk">—</span></div>
     </div>
 
     <div class="notes">
-      <div class="notes-title">NOTAS IMPORTANTES</div>
+      <div class="notes-title">NOTAS</div>
       • La búsqueda en KB la gestiona InvGate → no hay costo de embeddings en Bedrock<br>
-      • Si se vectoriza con Amazon KB (OpenSearch), agregar ~$0.02/1M tk embeddings + OpenSearch Serverless (~$350-700/mes)<br>
       • <strong>Pendiente:</strong> Validar si InvGate vectoriza internamente o recibe texto plano<br>
-      • Infra AWS: $1,149.40/mes según <a href="https://calculator.aws/#/estimate?id=c2e3c206849cbbfb923695e458c601b447eb6846" target="_blank" style="color:#2563eb">AWS Pricing Calculator</a><br>
       • Prompt Caching (no incluido) puede reducir input ~90% en system prompt repetido<br>
       • <strong>Volumen de tickets real no confirmado por Farmacity</strong> — ajustar conv/día según dato real<br>
-      • Imágenes: se recomienda redimensionar a máx 1568px lado largo antes de enviar al modelo<br>
-      • Fórmula tokens imagen: (ancho × alto) / 750
+      • Se recomienda redimensionar imágenes a máx 1568px en lado largo antes de enviar al modelo<br>
+      • Evaluación de calidad a definir en Discovery (Bedrock Model Evaluation, LLM-as-a-judge, o manual)
     </div>
   </div>
 
@@ -144,13 +123,6 @@
 </div>
 
 <script>
-const MODELS = {
-  "claude-haiku-45": { name: "Claude Haiku 4.5", inM: 1.0, outM: 5.0 },
-  "nova-pro": { name: "Nova Pro", inM: 0.80, outM: 3.20 },
-  "nova-lite": { name: "Nova Lite", inM: 0.06, outM: 0.24 },
-  "nova-micro": { name: "Nova Micro", inM: 0.035, outM: 0.14 },
-};
-const INFRA = 1149.40;
 const $ = id => document.getElementById(id);
 const fmt = n => '$' + n.toLocaleString('en-US', {minimumFractionDigits:2, maximumFractionDigits:2});
 const fmtN = n => n.toLocaleString('en-US');
@@ -168,13 +140,10 @@ function calc() {
   const imgCount = +$('imgCount').value || 0;
   const imgL = +$('imgL').value || 0;
   const imgW = +$('imgW').value || 0;
-  const evalPct = +$('evalPct').value || 0;
-  const evalModelKey = $('evalModel').value;
 
   const convMonth = convDay * days;
   const totalTurns = convMonth * turns;
 
-  // Text input tokens
   let textInputPerConv = 0;
   for (let t = 0; t < turns; t++) {
     textInputPerConv += sysTk + kbTk + queryTk + t * histTk;
@@ -182,32 +151,19 @@ function calc() {
   const textInputTotal = textInputPerConv * convMonth;
   const textOutputTotal = totalTurns * respTk;
 
-  // Image tokens
   const imgTokensPerImg = Math.round((imgL * imgW) / 750);
   const imgConvsMonth = Math.round(convMonth * imgPct / 100);
   const imgTurnsMonth = imgConvsMonth * turns;
   const imgTokensTotal = imgTurnsMonth * imgCount * imgTokensPerImg;
 
-  // Costs
-  const m = MODELS["claude-haiku-45"];
-  const textCost = (textInputTotal / 1e6) * m.inM + (textOutputTotal / 1e6) * m.outM;
-  const imgCost = (imgTokensTotal / 1e6) * m.inM;
-  const chatCost = textCost + imgCost;
+  const inPrice = 1.0;
+  const outPrice = 5.0;
+  const textCost = (textInputTotal / 1e6) * inPrice + (textOutputTotal / 1e6) * outPrice;
+  const imgCost = (imgTokensTotal / 1e6) * inPrice;
 
-  // Eval
-  const evalConvs = Math.ceil(convMonth * evalPct / 100);
-  const avgIn = sysTk + kbTk + queryTk + ((turns - 1) * histTk) / 2;
-  const evalIn = evalConvs * turns * (avgIn + respTk + 200);
-  const evalOut = evalConvs * turns * 150;
-  const em = MODELS[evalModelKey];
-  const evalCost = (evalIn / 1e6) * em.inM + (evalOut / 1e6) * em.outM;
-
-  const monthly = chatCost + evalCost;
+  const monthly = textCost + imgCost;
   const annual = monthly * 12;
-  const grandMonthly = monthly + INFRA;
-  const grandAnnual = grandMonthly * 12;
   const perConv = convMonth > 0 ? monthly / convMonth : 0;
-  const perConvAll = convMonth > 0 ? grandMonthly / convMonth : 0;
 
   $('rConvMonth').textContent = fmtN(convMonth);
   $('rTurns').textContent = fmtN(totalTurns);
@@ -215,19 +171,13 @@ function calc() {
   $('rOutput').textContent = (textOutputTotal / 1e6).toFixed(1) + 'M';
   $('rChatText').textContent = fmt(textCost);
   $('rChatImg').textContent = fmt(imgCost);
-  $('rEvalName').textContent = em.name;
-  $('rEvalConvs').textContent = evalConvs;
-  $('rEval').textContent = fmt(evalCost);
   $('rMonthly').textContent = fmt(monthly);
   $('rAnnual').textContent = fmt(annual);
-  $('rInfra').textContent = fmt(INFRA);
-  $('rGrandMonthly').textContent = fmt(grandMonthly);
-  $('rGrandAnnual').textContent = fmt(grandAnnual);
   $('rPerConv').textContent = fmt(perConv);
-  $('rPerConvAll').textContent = fmt(perConvAll);
+  $('rImgTk').textContent = fmtN(imgTokensPerImg) + ' tk';
 }
 
-document.querySelectorAll('input, select').forEach(el => el.addEventListener('input', calc));
+document.querySelectorAll('input').forEach(el => el.addEventListener('input', calc));
 calc();
 </script>
 </body>
